--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -1,8 +1,101 @@
 # 字符串
 
-## 字符串定义
+* 字符串遍历
+
+# 变量
+
+## 变量
+
+* 变量申明
+
+  * 标准申明
+
+  `var 变量 变量类型`
+
+  ```go
+  var v1 int
+  var v2 string
+  var v3 bool
+  ```
+
+  * 批量申明
+
+    ```go
+    var (
+    	v1 int
+        v2 string = "abc"
+    )
+    ```
+
+  * 函数内申明
+
+    ```go
+    v1 := 1
+    v2 := "abc"
+    ```
+
+    
+
+* 变量初始化
+
+  * 已申明变量
+
+    `变量 = 值` 
+
+    ```go
+    v1 = 123
+    v2 = "abc"
+    v3 = true
+    ```
+
+  * 申明时初始化值
+
+    ```go
+    var v1 int = 1
+    var v2 string = abc
+    ```
 
 
+
+## 常量
+
+* 常量声明时必须赋值
+
+  ` const 变量名 类型 = 值`
+
+  ```go
+  const c1 int = 1
+  const c2 bool = true
+  ```
+
+* 批量申明
+
+  ```go
+  const (
+  	c3 = 100 //100
+  	c4       //100
+  	c5 = 101 //101
+      c6       //101
+  )
+  ```
+
+
+
+### iota
+
+`iota` 是go语言的常量计数器，只能在常量的表达式中使用。 
+
+`iota`在const关键字出现记录当前第几行，const中每新增一行常量申明`iota`计数+1。使用iota能简化定义，在定义枚举时很有用。
+
+```go
+onst (
+    c1 = 1    // 1
+    c2 = iota // 1
+    c3 = 100  // 100
+    c4 = iota // 3
+    c5        // 4
+)
+```
 
 
 
