--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -389,4 +389,38 @@ onst (
   }
   ```
 
+
+
+* 元素为map的切片
+
+  `var name = make([]map[type]type)`
+
+  ```go
+  var m5 = make([]map[int]string, 3)
+  m5[0] = make(map[int]string)
+  m5[0][1] = "zhang3"
+  m5[0][2] = "li4"
+  for _, v := range m5 {
+      for _, v1 := range v {
+          fmt.Println(v1)
+      }
+  }
+  ```
+
   
+
+* 元素为切片的map
+
+  `var name = make(map[type][]type, 3)`
+
+  ```go
+  var m6 = make(map[int][]string, 3)
+  s := make([]string, 3)
+  s[0] = "beijing"
+  s[2] = "shanghai"
+  m6[1] = s
+  fmt.Println(m6)
+  ```
+
+
+
