--- a/笔记/流程控制.md
+++ b/笔记/流程控制.md
@@ -91,67 +91,105 @@ for k,v := range xxx{
 
  使用`switch`语句可方便地对大量的值进行条件判断。 
 
+ Go语言规定每个`switch`只能有一个`default`分支。 
 
+ `fallthrough`语法可以执行满足条件的case的下一个case，是为了兼容C语言中的case设计的。 
 
+```go
+teacher := "wang"
+switch teacher {
+    case "wang":
+    	fmt.Println("数学")
+    case "li":
+    	fmt.Println("语文")
+    default:
+    	fmt.Println("体育")
+}
+```
 
+```go
+switch week := 4; week {
+    case 1, 3:
+    	fmt.Println("golang")
+    case 2, 4, 5:
+    	fmt.Println("python")
+    default:
+    	fmt.Println("java")
+}
+```
 
-
-
-
+```go
+age := 15
+switch {
+    case age > 30 && age < 40:
+    	fmt.Println("30-40之间")
+    case age < 18:
+    	fmt.Println("小于18")
+   		// fallthrough
+    default:
+   		fmt.Println("default")
+}
+```
 
 
 
 # goto 标签跳转
 
+```
+package main
+import "fmt"
+fuck main(){
+	for i := 0; i < 5; i++ {
+		fmt.Println(i)
+		if i == 2 {
+			goto breakTag
+		}
+	}
+breakTag:
+	fmt.Println("goto跳出")
+}
+```
 
 
 
+# breakt跳出循环
+
+```go
+//跳出当前层循环
+	for i := 0; i < 10; i++ {
+		if i == 2 {
+			break
+		}
+		fmt.Printf("%v\n", i)
+	}
+	fmt.Println("...")
+// 跳出到制定标签
+BREAKDEMO1:
+	for i := 0; i < 10; i++ {
+		for j := 0; j < 10; j++ {
+			if j == 2 {
+				break BREAKDEMO1
+			}
+			fmt.Printf("%v-%v\n", i, j)
+		}
+	}
+	fmt.Println("...")
+```
 
 
 
+# continue继续下次循环
 
-
-
-
-
-
-# break
-
-
-
-
-
-
-
-
-
-
-
-
-
-# continue
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+```go
+forloop1:
+	for i := 0; i < 5; i++ {
+		// forloop2:
+		for j := 0; j < 5; j++ {
+			if i == 2 && j == 2 {
+				continue forloop1
+			}
+			fmt.Printf("%v-%v\n", i, j)
+		}
+	}
+```
 
