--- a/笔记/函数.md
+++ b/笔记/函数.md
@@ -83,4 +83,55 @@ func main() {
   可变参数是指函数的参数数量不固定。Go语言中的可变参数通过在参数名后加`...`来标识。
 
   注意：可变参数通常要作为函数的最后一个参数。
+  
+  ```go
+  func intSum2(x ...int) int {
+  	fmt.Println(x) // x是切片类型
+  	sum := 0
+  	for _, v := range x {
+  		sum = sum + v
+  	}
+  	return sum
+  }
+  
+  func main() {
+  	s1 := make([]int, 3, 3)
+  	s1 = []int{1, 2, 3}
+  	res1 := intSum2(s1...)
+  	res2 := intSum2(1, 2, 3, 3)
+  	fmt.Println(res1)
+  	fmt.Println(res2)
+  }
+  ```
+  
+  
 
+* 返回值
+
+   函数定义时可以给返回值命名，并在函数体中直接使用这些变量，最后通过`return`关键字返回。 
+
+  ```go
+  func calc(x, y int) (sum, sub int) {
+  	sum = x + y
+  	sub = x - y
+  	// return sum,
+  	return
+  }
+  
+  func main() {
+  	x, y := calc(33, 22)
+  	fmt.Println(x, y)
+  }
+  ```
+
+   当我们的一个函数返回值类型为slice时，nil可以看做是一个有效的slice，没必要显示返回一个长度为0的切片。 
+
+  ```go
+  func someFunc() []int {
+  	return nil
+  }
+  ```
+
+  
+
+  
