--- a/笔记/函数.md
+++ b/笔记/函数.md
@@ -132,6 +132,284 @@ func main() {
   }
   ```
 
+
+* 函数作为参数
+
+  ```go
+  package main
   
+  import "fmt"
+  
+  func add(x, y int) int {
+  	return x + y
+  }
+  
+  func calc(x, y int, op func(int, int) int) int {
+  	return op(x, y)
+  }
+  
+  func main() {
+  	x := 9
+  	y := 3
+  	res := calc(x, y, add)
+  	fmt.Println(res)
+  }
+  ```
 
   
+
+* 函数作为返回值
+
+  ```go
+  package main
+  
+  import "fmt"
+  
+  func add(x, y int) int {
+  	return x + y
+  }
+  
+  func calc() func(int, int) int {
+  	return add
+  }
+  
+  func main() {
+  	x := 9
+  	y := 3
+  	res := calc()
+  	fmt.Println(res(x, y))
+  }
+  ```
+
+  ```go
+  package main
+  
+  import (
+  	"errors"
+  	"fmt"
+  )
+  
+  func add(x, y int) int {
+  	return x + y
+  }
+  
+  func sub(x, y int) int {
+  	return x - y
+  }
+  func do(s string) (func(int, int) int, error) {
+  	switch s {
+  	case "+":
+  		return add, nil
+  	case "-":
+  		return sub, nil
+  	default:
+  		err := errors.New("无法识别操作符")
+  		return nil, err
+  	}
+  }
+  
+  func main() {
+  	x := 9
+  	y := 3
+  	res, _ := do("+")
+  	v := res(x, y)
+  	fmt.Println(v)
+  }
+  ```
+
+  
+
+## 匿名函数
+
+ 函数当然还可以作为返回值，但是在Go语言中函数内部不能再像之前那样定义函数了，只能定义匿名函数。匿名函数就是没有函数名的函数，匿名函数的定义格式如下： 
+
+```go
+func(参数)(返回值){
+    函数体
+}
+```
+
+ 匿名函数因为没有函数名，所以没办法像普通函数那样调用，所以匿名函数需要保存到某个变量或者作为立即执行函数 
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+	// 匿名函数保存成变量
+	f1 := func(x, y int) int {
+		return x + y
+	}
+	res := f1(5, 3)
+	fmt.Println(res)
+
+	// 字执行函数：匿名函数定义完加()直接执行
+	func(a, b int) {
+		fmt.Println(a + b)
+	}(5, 4)
+}
+```
+
+
+
+## 闭包
+
+函数引用了一个其外部作用域的变量，在该函数的生命周期内，变量一直有效
+
+```go
+package main
+
+import "fmt"
+
+func adder(x int) func(int) int {
+	return func(y int) int {
+		x += y
+		return x
+	}
+}
+
+func main() {
+	f1 := adder(10)
+	fmt.Println(f1(10))
+}
+```
+
+
+
+```go
+package main
+
+import "fmt"
+
+func adder(x int) func(int) int {
+	return func(y int) int {
+		x += y
+		return x
+	}
+}
+
+func calc(x int) (func(int) int, func(int) int) {
+	add := func(y int) int {
+		x += y
+		return x
+	}
+	sub := func(y int) int {
+		x -= y
+		return x
+	}
+	return add, sub
+}
+
+func main() {
+	//闭包=函数+引用环境
+	f1, f2 := calc(10)
+	fmt.Println(f1(1), f2(2)) //20 9
+	fmt.Println(f1(3), f2(4)) //12 8
+}
+
+```
+
+
+
+## 递归
+
+ 递归，就是在运行的过程中调用自己。 
+
+ 使用递归时，开发者需要设置退出条件，否则递归将陷入无限循环中 
+
+```go
+func recursion() {
+   recursion() /* 函数调用自身 */
+}
+
+func main() {
+   recursion()
+}
+```
+
+ 递归函数对于解决数学上的问题是非常有用的，就像计算阶乘，生成斐波那契数列等 。
+
+```go
+package main
+
+import "fmt"
+
+func factorial(n uint64) uint64 {
+	if n > 0 {
+		result := n * factorial(n-1)
+		return result
+	}
+	return 1
+}
+
+func main() {
+	f1 := factorial(15)
+	fmt.Println(f1)
+}
+```
+
+
+
+爬楼梯
+
+```go
+package main
+
+import "fmt"
+
+var count = 0
+
+func someFunc(n int) int {
+	if n == 1 {
+		return 1
+	}
+	if n == 2 {
+		return 2
+	}
+	count++
+	fmt.Println(count)
+	return someFunc(n-1) + someFunc(n-2)
+}
+func main() {
+	n := someFunc(4)
+	fmt.Println("n :", n) //5
+}
+```
+
+
+
+## defer语句
+
+ Go语言中的`defer`语句会将其后面跟随的语句进行延迟处理。在`defer`归属的函数即将返回时，将延迟处理的语句按`defer`定义的逆序进行执行，也就是说，先被`defer`的语句最后被执行，最后被`defer`的语句，最先被执行。 
+
+
+
+* defer执行时机
+
+   由于`defer`语句延迟调用的特性，所以`defer`语句能非常方便的处理资源释放问题。比如：资源清理、文件关闭、解锁及记录时间等。 
+
+  ![1609484402631](D:\go笔记\notes\笔记\函数.assets\1609484402631.png)
+
+例如：
+
+```go
+package main
+
+import "fmt"
+
+func main() {
+	fmt.Println("start")
+	defer fmt.Println(1)
+	defer fmt.Println(2)
+	defer fmt.Println(3)
+	fmt.Println("end")
+}
+// 结果：
+start
+end
+3
+2
+1
+```
+
