--- a/笔记/结构体.md
+++ b/笔记/结构体.md
@@ -412,6 +412,132 @@ func (接收者变量 接收者类型) 方法名(参数列表) (返回参数) {
 - 接收者类型：接收者类型和参数类似，可以是指针类型和非指针类型。
 - 方法名、参数列表、返回参数：具体格式与函数定义相同。
 
+```go
+type nickname struct {
+	name   string
+	age    int8
+	gender string
+	hobby  []string // 类型也可以是切片等
+}
+
+func newNickname(name string, age int8, gender string, hobby []string) *nickname {
+	return &nickname{
+		name:   name,
+		age:    age,
+		gender: gender,
+		hobby:  hobby,
+	}
+}
+
+func (n nickname) detail() {
+	fmt.Printf("老%v的年龄是%v", n.name, n.age)
+}
+
+func main() {
+	user1 := newNickname("马", 120, "male", []string{"abc", "def"})
+	fmt.Println(user1) //&{马 120 male [abc def]}
+	user1.detail()
+}
+```
+
+ 方法与函数的区别是，函数不属于任何类型，方法属于特定的类型。 
+
+* 指针类型的接收者
+
+  指针类型的接收者由一个结构体的指针组成，由于指针的特性，调用方法时修改接收者指针的任意成员变量，在方法结束后，修改都是有效的。这种方式就十分接近于其他语言中面向对象中的`this`或者`self`。 例如我们为`Person`添加一个`SetAge`方法，来修改实例变量的年龄。 
+
+  ```go
+  type nickname struct {
+  	name   string
+  	age    int8
+  	gender string
+  	hobby  []string // 类型也可以是切片等
+  }
+  
+  func newNickname(name string, age int8, gender string, hobby []string) *nickname {
+  	return &nickname{
+  		name:   name,
+  		age:    age,
+  		gender: gender,
+  		hobby:  hobby,
+  	}
+  }
+  
+  func (n *nickname) detail() {
+  	fmt.Printf("老%v的年龄是%v", n.name, n.age)
+  }
+  // *nickname指针类型接收者
+  func (n *nickname) setAge(newage int8) {
+  	n.age = newage
+  }
+  
+  func main() {
+  	user1 := newNickname("马", 120, "male", []string{"abc", "def"})
+  	fmt.Println(user1) //&{马 120 male [abc def]}
+  	user1.setAge(18)
+  	fmt.Println(user1) // &{马 18 male [abc def]}
+  }
+  ```
+
+  
+
+* 值类型的接收者
+
+  当方法作用于值类型接收者时，Go语言会在代码运行时将接收者的值复制一份。在值类型接收者的方法中可以获取接收者的成员值，但修改操作只是针对副本，无法修改接收者变量本身。 
+
+  ```go
+  func newNickname(name string, age int8, gender string, hobby []string) *nickname {
+  	return &nickname{
+  		name:   name,
+  		age:    age,
+  		gender: gender,
+  		hobby:  hobby,
+  	}
+  }
+  
+  func (n *nickname) detail() {
+  	fmt.Printf("老%v的年龄是%v\n", n.name, n.age)
+  }
+  // 值类型接收者 nickname
+  func (n nickname) setAge(newage int8) {
+  	n.age = newage
+  }
+  
+  func main() {
+  	user1 := newNickname("马", 120, "male", []string{"abc", "def"})
+  	user1.detail()
+  	fmt.Println(user1) //&{马 120 male [abc def]}
+  	user1.setAge(18)
+  	fmt.Println(user1) // &{马 18 male [abc def]}
+  }
+  ```
+
+  
+
+## 什么时候应该使用指针类型接收者
+
+1. 需要修改接收者中的值
+2. 接收者是拷贝代价比较大的大对象
+3. 保证一致性，如果有某个方法使用了指针接收者，那么其他的方法也应该使用指针接收者。
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
