--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -12,7 +12,7 @@
   		fmt.Printf("%c", v)
   	}
   
-  	// rune byte
+  	// rune byte 返回切片
   	str := []rune(s)
   	println(string(str))
   	// 修改字符，字符用单引号
