--- a/笔记/结构体.md
+++ b/笔记/结构体.md
@@ -217,9 +217,15 @@ type user struct {
   	fmt.Printf("%T\n", s3) //*main.hero
   	// &main.hero{name:"", activation:false, attribute:map[string]int(nil)}
   	fmt.Printf("%#v", s3)
+      // 直接初始化指针类型*main.user
+      u7 := &user{
+		name: "zhou8",
+  		age: 12,
+  	}
+  	fmt.Println(u7)
   }
   ```
-
+  
   
 
 ## 结构体初始化
@@ -522,9 +528,306 @@ func main() {
 
 
 
+## 结构体匿名字段
+
+结构体允许其成员字段在声明时没有字段名而只有类型，这种没有名字的字段就称为匿名字段。 
+
+这里匿名字段的说法并不代表没有字段名，而是默认会采用类型名作为字段名，结构体要求字段名称必须唯一，因此一个结构体中同种类型的匿名字段只能有一个。 
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+// 结构体匿名字段
+type User struct {
+	string
+	int
+}
+
+// 构造函数
+func NewUser(name string,age int) *User{
+	return &User{
+		name,
+		age,
+	}
+}
+// 方法
+func (u *User) setAge (name string,age int) int{
+	fmt.Printf("set name %v\n",name)
+	u.int = age
+	return age
+}
+
+func main()  {
+	p1 := User{
+		"zhang3",
+		18,
+	}
+	fmt.Println(p1)
+	p2 := NewUser("li4",20)
+	fmt.Println(p2.string)
+	res := p2.setAge("li4",22)
+	fmt.Println(res)
+}
+```
 
 
 
+## 嵌套结构体
+
+一个结构体中可以嵌套包含另一个结构体或结构体指针 
+
+```go
+package main
+
+import "fmt"
+
+// 结构体1
+type Address struct {
+	province string
+	city string
+}
+
+// 结构体2 嵌套结构体1
+type User struct {
+	name string
+	gender string
+	address Address
+}
+
+func main(){
+	addr := Address{
+		province: "guangdong",
+		city : "深圳",
+	}
+	user1 := User{
+		name: "user1",
+		gender: "male",
+		address: addr,
+	}
+	fmt.Println(user1) // {user1 male {guangdong 深圳}}
+
+	user2 := User{
+		name: "user2",
+		gender: "female",
+		address: Address{
+			province: "hebei",
+			city: "shijiazhuang",
+		},
+	}
+	fmt.Println(user2) // {user2 female {hebei shijiazhuang}}
+}
+```
+
+
+
+* 嵌套匿名字段
+
+  上面user结构体中嵌套的`Address`结构体也可以采用匿名字段的方式 
+
+  取值可以不写匿名字段，直接`.`匿名字段
+
+  ```go
+  // 结构体1
+  type Address struct {
+  	province string
+  	city string
+  }
+  
+  // 结构体2 嵌套结构体1
+  type User struct {
+  	name string
+  	gender string
+  	Address   // 匿名结构体
+  }
+  
+  func main(){
+  	addr := Address{
+  		province: "guangdong",
+  		city : "深圳",
+  	}
+  	user1 := User{
+  		name: "user1",
+  		gender: "male",
+  		Address: addr,
+  	}
+  	fmt.Println(user1.Address.city) // 深圳
+  
+  	user2 := User{
+  		name: "user2",
+  		gender: "female",
+  		Address: Address{
+  			province: "hebei",
+  			city: "shijiazhuang",
+  		},
+  	}
+  	fmt.Println(user2.city) // 省略匿名字段直接.匿名字段下的字段
+  }
+  ```
+
+* 嵌套匿名字段名冲突
+
+  ```go
+  //Address 地址结构体
+  type Address struct {
+  	Province   string
+  	City       string
+  	CreateTime string
+  }
+  
+  //Email 邮箱结构体
+  type Email struct {
+  	Account    string
+  	CreateTime string
+  }
+  
+  //User 用户结构体
+  type User struct {
+  	Name   string
+  	Gender string
+  	Address
+  	Email
+  }
+  
+  func main() {
+  	var user3 User
+  	user3.Name = "沙河娜扎"
+  	user3.Gender = "男"
+  	// user3.CreateTime = "2019" //ambiguous selector user3.CreateTime
+  	user3.Address.CreateTime = "2000" //指定Address结构体中的CreateTime
+  	user3.Email.CreateTime = "2000"   //指定Email结构体中的CreateTime
+  }
+  ```
+
+  
+
+## 结构体的“继承”
+
+```go
+package main
+
+import "fmt"
+
+/* 结构体的继承 */
+
+type Animal struct {
+	name string
+}
+
+func (a Animal) move(){
+	fmt.Printf("%s move...\n",a.name)
+}
+
+type Dog struct {
+	feet int8
+	*Animal
+}
+
+func (d Dog) wang()  {
+	fmt.Printf("%s wang...\n",d.name)
+}
+
+func main()  {
+	d1 := &Dog{
+		feet: 4,
+		Animal: &Animal{
+			name: "wangcai",
+		},
+	}
+	d1.wang()
+	d1.move() // d1直接使用 Animal的move()方法
+}
+```
+
+
+
+## 结构体字段可见性
+
+ 结构体中字段大写开头表示可公开访问，小写表示私有（仅在定义当前结构体的包中可访问）。 
+
+
+
+## 结构体标签
+
+`Tag`是结构体的元信息，可以在运行的时候通过反射的机制读取出来。 `Tag`在结构体字段的后方定义，由一对**反引号**``包裹起来，具体的格式如下： 
+
+```go
+`key1:"value1" key2:"value2"`
+
+type User struct {
+	Name string `json:"name"` //结构体标签 
+	Age int16
+}
+```
+
+结构体tag由一个或多个键值对组成。键与值使用冒号分隔，值用双引号括起来。同一个结构体字段可以设置多个键值对tag，不同的键值对之间使用空格分隔。 
+
+> <font color=FF0000>**注意事项：** </font>为结构体编写`Tag`时，必须严格遵守键值对的规则。结构体标签的解析代码的容错能力很差，一旦格式写错，编译和运行时都不会提示任何错误，通过反射也无法正确取值。例如不要在key和value之间添加空格。 
+
+```go
+package main
+
+import (
+	"encoding/json"
+	"fmt"
+)
+
+type User struct {
+	Name string `json:"name"` //结构体标签 
+	Age int16
+}
+
+func main(){
+	user1 := User{
+		Name: "yang",
+		Age: 11,
+	}
+	jsonData , err := json.Marshal(user1)
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	fmt.Printf("%s",jsonData) //{"name":"yang","Age":11}
+}
+```
+
+
+
+## 结构体包含切片、map
+
+ 在方法中使用传入的slice的拷贝进行结构体赋值。 
+
+```go
+func (p *Person) SetDreams(dreams []string) {
+	p.dreams = make([]string, len(dreams))
+	copy(p.dreams, dreams)
+}
+```
+
+```go
+type Person struct {
+	name   string
+	age    int8
+	dreams []string
+}
+
+func (p *Person) SetDreams(dreams []string) {
+	p.dreams = dreams
+}
+
+func main() {
+	p1 := Person{name: "小王子", age: 18}
+	data := []string{"吃饭", "睡觉", "打豆豆"}
+	p1.SetDreams(data) // 底层指向该切片的内存，
+
+	// 修改切片值，结构体值也会随之改变
+	data[1] = "不睡觉"
+	fmt.Println(p1.dreams)  // ?
+}
+```
 
 
 
