--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -271,6 +271,14 @@ onst (
   s3 = append(s3, 1, 2, 3)
   ```
 
+* 清空切片
+
+  ```go
+  clise = clise[0:0] // clice为切片的名字
+  ```
+
+  
+
 # map
 
 * map定义
