--- a/笔记/结构体.md
+++ b/笔记/结构体.md
@@ -759,7 +759,9 @@ func main()  {
 
 type User struct {
 	Name string `json:"name"` //结构体标签 
-	Age int16
+    Age int16   `josn:" _age"`
+    sex unit    `json:"_"` //不解析
+    Address string // 不改变标签
 }
 ```
 
@@ -830,6 +832,166 @@ func main() {
 ```
 
 
+
+# 练习
+
+学生管理系统
+
+* 使用函数方式构建（这里用切片类型，导致数据位移，删除后位移数据重复）
+
+```go
+package main
+/* 由于golang 切片特性,不适用该场景,导致切片位移,删除操作数据位移,造成位移重复 */
+import (
+	"fmt"
+	"os"
+)
+
+type  student struct {
+	id int
+	name string
+	gender string
+}
+
+var (
+	id int
+	name string
+	gender string
+)
+
+// 定义切片类型存放学生信息
+//var stu []*student
+var stu = make([]*student,0,50)
+// 查看学员列表
+func liststu(stu *[]*student){
+	if len(*stu) == 0{
+		fmt.Println("    空列表...")
+		return
+	}
+	stu2 := *stu
+	for i := 0 ;i<len(stu2);{
+		//stu2 := *stu
+		//fmt.Printf("%d",*stu2[i].id)
+		s3 := *stu2[i]
+		fmt.Printf("%v %v %v\n",s3.id,s3.name,s3.gender)
+		i++
+	}
+}
+
+// 新增学员
+func addstu(id int,name,gender string,stu *[]*student){
+	*stu = append(*stu,&student{id,name,gender})
+}
+
+// 修改学员信息
+func updatestu(id int,stu *[]*student){
+	s := *stu
+	fmt.Println("修改")
+	var count = len(s)
+	for i := 0 ;i < count ;{
+		ss := s[i]
+		if ss.id == id {
+			fmt.Print("Name:")
+			fmt.Scan(&name)
+			fmt.Print("Gender:")
+			fmt.Scan(&gender)
+			//ss.id =
+			ss.name = name
+			ss.gender = gender
+		}
+		i++
+	}
+}
+
+// 删除学员
+func deletestu(id int ,stu *[]*student){
+	// *[]*main.student
+	//*stu = append(*stu,&student{id,name,gender})
+	//fmt.Println(stu)
+	s := *stu
+	//fmt.Println(len(s))
+	var count = len(s)
+	for i := 0 ;i < count ;{
+		ss := s[i]
+		if ss.id == id {
+			fmt.Println("删除的ID: ",ss.id)
+			switch count {
+			case 1:
+				s = s[0:0]
+			case 2:
+				if i == 0{
+					s = append(s[0:1])
+				}else {
+					s = append(s[1:])
+				}
+			default:
+				var idx int
+				idx = i + 1
+				s = append(s[:i],s[idx:]...)
+			}
+			fmt.Println(s)
+			return
+		}
+		i++
+	}
+}
+
+func main(){
+	// 构建提示列表
+	listchoice := map[int]string{
+		1: "查看列表",
+		2: "添加学员",
+		3: "修改信息",
+		4: "删除学员",
+		5: "退出系统",
+	}
+	for{
+		// 循环展示选项列表
+		for i := 1 ;i<=len(listchoice) ;{
+			fmt.Println(i,listchoice[i])
+			i++
+		}
+		// 获取手动输入序号
+		var choice int
+		fmt.Scanln(&choice)
+		fmt.Println("当前操作:",listchoice[choice])
+		// 根据输入序号执行相应函数
+		switch choice {
+		case 1:
+			liststu(&stu)
+		case 2:
+			fmt.Print("ID: ")
+			fmt.Scanln(&id)
+			fmt.Print("NAME: ")
+			fmt.Scanln(&name)
+			fmt.Print("GENDER: ")
+			fmt.Scanln(&gender)
+			//fmt.Println(id,name,gender)
+			addstu(id,name,gender,&stu)
+		case 3:
+			fmt.Print("需要修改的ID: ")
+			fmt.Scanln(&id)
+			updatestu(id,&stu)
+		case 4:
+			fmt.Print("需要删除的ID: ")
+			fmt.Scanln(&id)
+			deletestu(id,&stu)
+		case 5:
+			os.Exit(5)
+		default:
+			fmt.Println("选择错误!")
+		}
+	}
+}
+```
+
+
+
+* 采用面向对象方式,使用map构建基础数据
+
+```go
+
+```
 
 
 
