--- a/笔记/资料进度.md
+++ b/笔记/资料进度.md
@@ -85,6 +85,7 @@ windows  打开你的 PowerShell 并执行  重启vscode 安装成功
 |  %f  | 浮点数                                   |
 |  %p  | 指针，十六进制方式显示                   |
 |  %c  | 返回ASSIC码表对应的值                    |
+|  %t  | 打印布尔值true或false                    |
 
 ```go
 package main
@@ -96,6 +97,17 @@ func main() {
 	fmt.Println(variant)  // 月球基地 3.141590 true
 }
 ```
+
+```go
+	var aa struct{
+		name string
+	}
+	aa.name="aaaaa"
+	fmt.Printf("%v",aa) // {aaaaa}
+	fmt.Printf("%v",aa) // {name:aaaaa}
+```
+
+
 
 ## Golang doc
 
