面向对象练习

--- a/笔记/流程控制.md
+++ b/笔记/流程控制.md
@@ -131,6 +131,32 @@ switch {
 }
 ```
 
+判断类型
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+func main(){
+	var x interface{}
+	switch i:=x.(type) {
+	case nil:
+		fmt.Printf("type:%T ",i)
+	case string:
+		fmt.Printf("type:%T",i)
+	case func(int) float64:
+		fmt.Println("x 是 func(int)类型")
+	case bool,int:
+		fmt.Println("bool or int")
+	default:
+		fmt.Println("未知")
+	}
+}
+```
+
 
 
 # goto 标签跳转
