--- a/笔记/结构体.md
+++ b/笔记/结构体.md
@@ -990,7 +990,139 @@ func main(){
 * 采用面向对象方式,使用map构建基础数据
 
 ```go
+package main
 
+import (
+	"fmt"
+	"os"
+)
+
+// 自定义结构体
+type Student struct {
+	Name string
+	Gender string
+}
+
+
+// 构造函数
+func newStudent(name,gender string) *Student {
+	return &Student{
+		Name: name,
+		Gender: gender,
+	}
+}
+
+//// 查看列表方法
+//func (s *Student)stuList() {
+//	fmt.Println("list")
+//}
+
+
+// 新增学员方法
+func (s *Student)stuAdd(stuinfo *map[int]Student,id int,name,gender string) {
+	for k,_ := range *stuinfo{
+		if k == id{
+			fmt.Println("ID重复!")
+			return
+		}
+	}
+	stu := newStudent(name,gender)
+	ss := *stuinfo
+	ss[id] = *stu
+}
+
+// 修改信息方法
+func (s *Student)stuUpd(stuinfo *map[int]Student,id int,name,gender string) {
+	for k,_ := range *stuinfo{
+		if k == id{
+			stu := newStudent(name,gender)
+			ss := *stuinfo
+			ss[id] = *stu
+			return
+		}
+	}
+	fmt.Println("ID不存在.........",id)
+	return
+}
+
+
+// 删除方法
+//func (s *Student)stuDel() {
+//	fmt.Println("delete")
+//}
+
+
+func main()  {
+	// 定义提示信息
+	listchoice := `1: "查看列表"`+"\n"+`2: "添加学员"`+"\n"+`3: "修改信息"`+"\n"+`4: "删除学员"`+"\n"+`5: "退出系统"`
+	// 定义输入变量
+	var (
+		id int
+		name string
+		gender string
+	)
+
+
+	// 构建学员信息
+	stuInfo := make(map[int]Student)
+
+	// 循环输入,并打印提示
+	for {
+		fmt.Println(listchoice)
+		var choice int
+		fmt.Scanln(&choice)
+		//fmt.Println(stuInfo)
+		switch choice {
+		case 1:
+			fmt.Println("当前操作: ",choice)
+			if len(stuInfo) == 0{
+				fmt.Println("空列表")
+			}
+			//fmt.Println("非空")
+			func(s *map[int]Student) {
+				for k,v := range stuInfo{
+					fmt.Println(k,v.Name,v.Gender)
+				}
+			}(&stuInfo)
+		case 2:
+			fmt.Println("当前操作: ",choice)
+			func(s *map[int]Student){
+				fmt.Print("ID:")
+				fmt.Scanln(&id)
+				fmt.Print("NAME:")
+				fmt.Scanln(&name)
+				fmt.Print("GETNDER:")
+				fmt.Scanln(&gender)
+				sid := stuInfo[id]
+				sid.stuAdd(s,id,name,gender)
+			}(&stuInfo)
+		case 3:
+			fmt.Println("当前操作: ",choice)
+			func(s *map[int]Student){
+				fmt.Print("ID:")
+				fmt.Scanln(&id)
+				fmt.Print("NAME:")
+				fmt.Scanln(&name)
+				fmt.Print("GETNDER:")
+				fmt.Scanln(&gender)
+				sid := stuInfo[id]
+				sid.stuUpd(s,id,name,gender)
+			}(&stuInfo)
+		case 4:
+			fmt.Println("当前操作: ",choice)
+			if len(stuInfo) == 0{
+				fmt.Println("空列表")
+			}
+			fmt.Print("ID:")
+			fmt.Scanln(&id)
+			delete(stuInfo,id)
+		case 5:
+			os.Exit(5)
+		default:
+			fmt.Println("选项不存在")
+		}
+	}
+}
 ```
 
 
