--- a/笔记/函数.md
+++ b/笔记/函数.md
@@ -1,5 +1,69 @@
 # 函数
 
+GO语言中，函数也是一种类型，可以和其他类型(int,float等)一样呗保存再变量中
+
+`type 类型名 func(参数) 返回值`
+
+只要定义变量接受了该函数返回值，则该函数必须有适合类型的返回值
+
+```go
+result := StringToLower("AbcdefGHijklMNOPqrstUVWxyz",processCase)
+// StringToLower 必须有返回值，或者不用接收
+```
+
+以下使用自定义函数类型作为参数
+
+```go
+package main
+
+import (
+	"fmt"
+	"strings"
+)
+
+type myfunc func(string)string
+
+func processCase(str string) string{
+	var result string
+	for k,v := range str{
+		// 转大写或转小写
+		if k%2 == 0{
+			result += strings.ToUpper(string(v))
+		}else {
+			result += strings.ToLower(string(v))
+		}
+	}
+	return result
+}
+
+func StringToLower(str string,f func(string)string)string{
+	fmt.Println("%T",f)
+	res := f(str)
+	return res
+}
+
+// 参数接收自定义函数类型
+func StringToLower2(str string,f myfunc) string{
+	return f(str)
+}
+
+func main(){
+	result := StringToLower("AbcdefGHijklMNOPqrstUVWxyz",processCase)
+	fmt.Println(result)
+	result2 := StringToLower2("AbcdefGHijklMNOPqrstUVWxyz",processCase)
+	fmt.Println(result2)
+}
+
+/*
+返回
+%T 0x55e0c0
+AbCdEfGhIjKlMnOpQrStUvWxYz
+AbCdEfGhIjKlMnOpQrStUvWxYz
+*/
+```
+
+
+
 ## 函数定义
 
 `func name (args type) (res type){ body }`
@@ -412,4 +476,65 @@ end
 2
 1
 ```
+
+
+
+
+
+## 练习
+
+判断切片奇偶数
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+type myfunc func([]int)[]int
+
+func filter(s []int,f myfunc)[]int{
+	res := f(s)
+	return res
+}
+
+func isOdd(s []int)[]int{
+	var res []int
+	for _,v := range s{
+		if v%2 != 0{
+			res = append(res,v)
+		}
+	}
+	return res
+}
+
+func isEven(s []int)[]int {
+	var res []int
+	for _,v := range s{
+		if v%2 == 0{
+			res = append(res,v)
+		}
+	}
+	return res
+}
+
+func main() {
+	s1 := []int{1,2,3,4,5}
+	fmt.Println(s1)
+	odd := filter(s1 , isOdd)
+	fmt.Println("奇数元素",odd)
+	even := filter(s1, isEven)
+	fmt.Println("偶数",even)
+}
+
+/*
+返回：
+[1 2 3 4 5]
+奇数元素 [1 3 5]
+偶数 [2 4]
+*/
+```
+
+
 
