--- a/笔记/文件操作.md
+++ b/笔记/文件操作.md
@@ -166,9 +166,53 @@ func main() {
 
 ## 复制文件
 
-`fopyFile()`
+`io.copy`
 
+`func Copy(dst Writer, src Reader) (written int64, err error) {`
 
+将src的数据拷贝到dst，直到在src上到达EOF或发生错误。返回拷贝的字节数和遇到的第一个错误。
+
+对成功的调用，<font color=FF0000>**返回值err为nil而非EOF，因为Copy定义为从src读取直到EOF，它不会将读取到EOF视为应报告的错误。**</font>>如果src实现了WriterTo接口，本函数会调用src.WriteTo(dst)进行拷贝；否则如果dst实现了ReaderFrom接口，本函数会调用dst.ReadFrom(src)进行拷贝。
+
+```go
+package main
+
+import (
+	"fmt"
+	"io"
+	"os"
+)
+
+func copyFile(src,dest string)(int64,error){
+	srcfile, err := os.Open(src)
+	if err != nil{
+		fmt.Println(err)
+		return 0, err
+	}
+	destfile , err := os.OpenFile(dest,os.O_RDWR|os.O_CREATE,os.ModePerm) // ModePerm默认0777
+	if err !=nil {
+		fmt.Println(err)
+		return 0, err
+	}
+	defer srcfile.Close()
+	defer destfile.Close()
+	// 直接返回，在mian函数判断err省去一步if nil
+	return io.Copy(destfile,srcfile)
+}
+
+func main() {
+	// 源文件
+	srcFile := "./test.txt"
+	// 新文件
+	destFile := "./testCopy.txt"
+	total ,err := copyFile(srcFile,destFile)
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	fmt.Println("复制完成", total)
+}
+```
 
 
 
@@ -182,25 +226,395 @@ func (f *File) Read(b []byte) (n int, err error)
 
  它接收一个字节切片，返回读取的字节数和可能的具体错误，读到文件末尾时会返回`0`和`io.EOF`。 举个例子： 
 
+```go
+package main
+
+import (
+	"fmt"
+	"io"
+	"os"
+)
+
+func main(){
+	f ,err := os.Open("main.go")
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	defer f.Close()
+	var tmp = make([]byte,128)
+	n,err := f.Read(tmp)
+	if err == io.EOF{
+		fmt.Println("读完了")
+		return
+	}
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	fmt.Printf("type:%T  %v\n",n,n)
+	fmt.Printf("type:%T  %v\n",tmp,string(tmp[:]))
+}
+```
+
+循环读
+
+```go
+func main(){
+	f ,err := os.Open("main.go")
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	defer f.Close()
+	var tmp = make([]byte,128)
+		for {
+		n,err := f.Read(tmp)
+		if err == io.EOF{
+			fmt.Println("读完了")
+			return
+		}
+		if err != nil{
+			fmt.Println(err)
+			return
+		}
+		fmt.Printf("type:%T  %v\n",n,n)
+		fmt.Printf("type:%T  %v\n",tmp,string(tmp[:n]))
+	}
+}
+```
+
+
+
+## bufio读文件
+
+` import "bufio" `
+
+`bufio`包实现了有缓冲的I/O。它包装一个`io.Reader`或`io.Writer`接口对象，创建另一个也实现了该接口，且同时还提供了缓冲和一些文本I/O的帮助函数的对象。 
+
+```go
+package main
+
+import (
+	"bufio"
+	"fmt"
+	"io"
+	"os"
+)
+
+func main(){
+	if f,err := os.Open("main.go"); err == nil{
+		defer f.Close()
+		reader := bufio.NewReader(f) // *bufio.Reader
+		for {
+			line ,err := reader.ReadString('\n')
+			//fmt.Println(len(line))
+			if err == io.EOF{
+				if len(line) !=0 {
+					fmt.Println(line) // 最后一行
+				}
+				fmt.Println("读完了")
+				break
+			}
+			if err != nil {
+				fmt.Println("读取失败",err)
+				return
+			}
+			fmt.Print(line) // 输出读到的每行
+		}
+	}
+}
+```
+
+
+
+## ioutil读取整个文件
+
+` import "io/ioutil" `
+
+ `io/ioutil`包的`ReadFile`方法能够读取完整的文件，只需要将文件名作为参数传入。 
+
+```go
+package main
+
+import (
+	"fmt"
+	"io/ioutil"
+)
+
+func main() {
+	content ,err := ioutil.ReadFile("main.go")
+	if err != nil{
+		fmt.Println("failed",err)
+		return
+	}
+	fmt.Println(string(content))
+}
+```
+
+
+
+# 文件写操作
+
+ `os.OpenFile()`函数能够以指定模式打开文件，从而实现文件写入相关功能。 
+
+```go
+func OpenFile(name string, flag int, perm FileMode) (*File, error) {
+	...
+}
+```
+
+其中：
+
+`name`：要打开的文件名 `flag`：打开文件的模式。 模式有以下几种：
+
+| 模式        | 含义     |
+| ----------- | -------- |
+| os.O_WRONLY | 只写     |
+| os.O_CREATE | 创建文件 |
+| os.O_RDONLY | 只读     |
+| os.O_RDWR   | 读写     |
+| os.O_TRUNC  | 清空     |
+| os.O_APPEND | 追加     |
+
+ `perm`：文件权限，一个八进制数。r（读）04，w（写）02，x（执行）01。 
+
+
+
+## Write和WriteString
+
+```go
+str := "xxxxx"
+file.Write([]byte(str))   // 写入字节切片数据
+file.WriteString("xxxx")  // 直接写入字符串数据
+```
+
+```go
+package main
+
+import (
+	"fmt"
+	"os"
+)
+
+func main() {
+	f,err := os.OpenFile("test.txt",os.O_CREATE|os.O_APPEND|os.O_WRONLY, 0644)
+    defer f.Close()
+    if err != nil{
+		fmt.Println(err)
+		return
+	}
+	f.WriteString("abc"+"\n")
+	f.WriteString("def")
+}
+```
+
+
+
+## bufio.NewWriter
+
+将数据写入缓存后，通过flush方法刷新到文件
+
+```go
+package main
+
+import (
+	"bufio"
+	"fmt"
+	"os"
+)
+
+func main() {
+	f,err := os.OpenFile("test.txt",os.O_CREATE|os.O_APPEND|os.O_WRONLY, 0644)
+	defer f.Close()
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+	writer := bufio.NewWriter(f)
+	writer.WriteString("abcd 中文")
+	writer.Flush()
+}
+```
+
+
+
+## ioutil.WriteFile
+
+```go
+package main
+
+import (
+	"fmt"
+	"io/ioutil"
+)
+
+func main() {
+	err := ioutil.WriteFile("test.txt",[]byte("abc 仲文"),0644)
+	if err != nil{
+		fmt.Println(err)
+		return
+	}
+}
+```
 
 
 
 
 
+# 练习
 
+* 模拟copy命令
 
+  ```go
+  package main
+  
+  import (
+  	"errors"
+  	"flag"
+  	"fmt"
+  	"io"
+  	"os"
+  )
+  
+  // 使用flag.StringVar 预定义两个传参变量
+  var (
+  	src string    // 源文件
+  	dest string   // 目标文件
+  )
+  
+  // init 初始化包，接收两个变量
+  func init()  {
+  	flag.StringVar(&dest,"dest","","-dest destFile")
+  	flag.StringVar(&src,"src","","-src srcFile")
+  }
+  
+  // copyFile 实现拷贝文件函数，一句io.copy 传参，返回字节数，和错误
+  func copyFile(src,dest string)(int64,error){
+  	// 判断源文件和目标文件是否为空
+  	if src == "" {
+  		return 0,errors.New("src is null")
+  	}else if dest == "" {
+  		return 0,errors.New("dest is null")
+  	}
+  	// 拿到源文件句柄对象
+  	srcObj,err := os.Open(src)
+  	// 函数return前关闭文件
+  	defer srcObj.Close()
+  	if err != nil{
+  		err := fmt.Sprintf("Open %v file failed",src)
+  		return 0,errors.New(err)
+  	}
+  	// 读写模式打开目标文件，使用默认755权限
+  	destObj,err := os.OpenFile(dest,os.O_RDWR|os.O_CREATE,os.ModePerm)
+  	// return前关闭文件
+  	defer destObj.Close()
+  	if err !=nil {
+  		//fmt.Println(err)
+  		return 0,err
+  	}
+  	// io.copy实现文件拷贝，目标文件，源文件，返回拷贝字节数和错误
+  	n ,err := io.Copy(destObj,srcObj)
+  	if err != nil{
+  		return 0,err
+  	}
+  	return n,nil
+  }
+  
+  func main()  {
+  	// 初始化flag传参
+  	flag.Parse()
+  	// 调用自定义函数拷贝文件
+  	n,err := copyFile(src,dest)
+  	// 判断是否出错
+  	if err != nil{
+  		fmt.Println(err)
+  		return
+  	}
+  	fmt.Println("复制成功",n)
+  }
+  ```
 
+  执行结果：
 
+  ```go
+  go build
+  // 不传参
+  gocopy.exe // 返回src is null
+  // 传参不足
+  gocopy.exe -src main.go // dest is null
+  // 正常执行
+  gocopy.exe -src  main.go -dest main.go_bak // 复制成功 1478
+  // 源文件不存在
+  gocopy.exe -src  ma -dest main.go_bak  // Open ma file failed
+  ```
 
+  
 
+* 模拟一个cat命令（面向接口）
 
+  ```go
+  package main
+  
+  import (
+  	"bufio"
+  	"flag"
+  	"fmt"
+  	"io"
+  	"os"
+  )
+  
+  type Catter interface {
+  	catfile()
+  }
+  
+  type Inputfile struct {
+  	filename string
+  }
+  
+  var filename string
+  
+  func init(){
+  	flag.StringVar(&filename,"f","","-f filename")
+  }
+  
+  func Newcatfile(f string)Inputfile{
+  	return Inputfile{
+  		filename: f,
+  	}
+  }
+  
+  func (i Inputfile) catfile(){
+  	// 打开文件
+  	f , err := os.Open(i.filename)
+  	defer f.Close()
+  	reder := bufio.NewReader(f)
+  	if err != nil{
+  		fmt.Println(err)
+  	}
+  	for {
+  		line,err := reder.ReadString('\n')
+  		if err == io.EOF{
+  			if len(line) != 0{
+  				fmt.Println(line)
+  			}
+  			break
+  		}
+  		if err != nil{
+  			fmt.Println("读取失败",err)
+  			return
+  		}
+  		fmt.Print(line)
+  	}
+  }
+  
+  
+  func main() {
+  	flag.Parse()
+  	var filenameObj Catter
+  	filenameObj = Newcatfile(filename)
+  	filenameObj.catfile()
+  }
+  ```
 
-
-
-
-
-
-
-
-
-
+  
