--- a/笔记/结构体.md
+++ b/笔记/结构体.md
@@ -371,6 +371,35 @@ fmt.Println(unsafe.Sizeof(v))  // 0
 
 
 
+## 判断结构体是否为空
+
+`if 结构体 == (结构体类型{}){ code }`
+
+```go
+package main
+
+import "fmt"
+
+type Students struct {
+	Name string
+	Age int
+}
+
+func main() {
+	s := Students{}
+	if s == (Students{}){
+		fmt.Println("结构体为空")
+		return
+	}
+}
+```
+
+
+
+
+
+
+
 ## 构造函数
 
  Go语言的结构体没有构造函数，我们可以自己实现。 例如，下方的代码就实现了一个`person`的构造函数。 因为`struct`是值类型，如果结构体比较复杂的话，值拷贝性能开销会比较大，所以该构造函数返回的是结构体指针类型。 
