--- a/笔记/指针.md
+++ b/笔记/指针.md
@@ -70,6 +70,105 @@
   }
   ```
 
+## 空指针
+
+当一个阵阵被定义时，没有分配任何变量，她的值为nil
+
+```go
+func main() {
+	var s1 *string
+	fmt.Println(s1) // <nil>
+}
+```
+
+
+
+## 指针使用
+
+通过指针修改变量值
+
+```go
+func main() {
+	var s1 = 110
+	a := &s1
+	fmt.Printf("%T %v\n",s1,s1)  // int 110
+	fmt.Printf("%T %v\n",a,a)	// *int 0x1140a0a0
+
+	*a++
+	fmt.Printf("%T %v\n",s1,s1)  // int 111
+	fmt.Printf("%T %v\n",a,a)	// *int 0x11c0a0a0
+}
+```
+
+
+
+```go
+	s1 := 10
+	var s2 *int
+	s2 = &s1
+	fmt.Println(s1,s2,*s2) //10 0x11c0a0a0 10
+```
+
+
+
+## 切片指针
+
+`var a1 *[]int`
+
+```go
+func main() {
+	var a1 *[]int
+	a2 := []int{1,2,3}
+	a1 = &a2
+	fmt.Printf("%T %v %v",a1,a1,*a1) // *[]int &[1 2 3] [1 2 3]
+}
+```
+
+
+
+## 指针数组
+
+元素为指针类型的数组
+
+`var ptr []*string`
+
+```go
+package main
+
+import "fmt"
+
+// 定义常量 固定包数组长度
+const COUNT = 4
+
+func main() {
+	a := [COUNT]string{"ABC","def","123","中文"}
+	i := 0
+
+	// 定义指针数组
+	var ptr [COUNT]*string
+	
+	fmt.Printf("type:%T %v\n",ptr,ptr)  // type:[4]*string [<nil> <nil> <nil> <nil>]
+
+	for i<COUNT {
+		// 将数组中每个元素的地址赋值给指针数组
+		ptr[i] = &a[i]
+		i++
+	}
+	fmt.Printf("type:%T %v\n",ptr,ptr)  // type:[4]*string [0x1148b9e0 0x1148b9e8 0x1148b9f0 0x1148b9f8]
+
+	// 获取指针数组中的值
+	fmt.Println(ptr[0])                        // 0x1148b9e0
+	// 根据数组元素的每个地址获取该地址所指向的元素的数值
+	for i = 0;i<COUNT ; i++{
+		fmt.Printf("a[%d] %s\n",i,*ptr[i]) // a[0] ABC、 a[1] def 、a[2] 123 、 a[3] 中文
+	}
+}
+```
+
+
+
+
+
 # new
 
 `new(Type)      返回*Type`
