--- a/笔记/函数.md
+++ b/笔记/函数.md
@@ -130,6 +130,8 @@ func main() {
 
 ## 参数
 
+Go语言中所有的传参都是值传递（传值），都是一个副本，副本内容有的是值类型（int、string、bool、array、struct属于值类型），这样再函数中就无法修改源内容数据；有的是引用类型（pointer、slice、map、chan属于引用类型），这样就可以修改源内容数据  
+
 * 类型简写
 
    函数的参数中如果相邻变量的类型相同，则可以省略类型，例如： 
@@ -281,7 +283,72 @@ func main() {
   }
   ```
 
-  
+
+
+
+## 数组和切片作为参数的不同
+
+数组传参，传入指针类型可修改数组
+
+切片传参，不传指针类型也可修改数组,本质上传入的是值的指针
+
+数组测试：
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+func f1(s [3]int){
+	s[0] = 11
+}
+
+func f2(s *[3]int){
+	(*s)[1] = 22
+}
+
+func main() {
+	s1 := [3]int{1,2,3}
+	fmt.Println("1,",s1)
+
+	f1(s1)
+	fmt.Println(s1)  // [1 2 3]
+	f2(&s1)
+	fmt.Println(s1)  // [1 22 3]
+}
+```
+
+指针测试：
+
+```go
+package main
+
+import (
+	"fmt"
+)
+
+func f1(s []int){
+	s[0] = 11
+}
+
+func f2(s *[]int){
+	(*s)[1] = 22
+}
+
+func main() {
+	s1 := []int{1,2,3}
+	fmt.Println("1,",s1)
+
+	f1(s1)
+	fmt.Println(s1)  // [11 2 3] 这里参数是值，看到也被修改了
+	f2(&s1)
+	fmt.Println(s1)  // [11 22 3]
+}
+```
+
+
 
 ## 匿名函数
 
