--- a/笔记/文件操作.md
+++ b/笔记/文件操作.md
@@ -216,6 +216,31 @@ func main() {
 
 
 
+##  创建文件
+
+```go
+	f,err := os.Create("mtest/test.txt")
+	if err !=nil {
+		panic("文件创建失败")
+	}
+	f.Close()
+```
+
+
+
+```go
+f,err := os.Create(fileName)
+defer f.Close()
+if err !=nil {
+    fmt.Println(err.Error())
+} else {
+    _,err=f.Write([]byte("要写入的文本内容"))
+    checkErr(err)
+}
+```
+
+
+
 ## 读取文件
 
 Read方法定义如下：
@@ -459,6 +484,50 @@ func main() {
 ```
 
 
+
+# 判断文件是否存在
+
+golang判断文件或文件夹是否存在的方法为使用`os.Stat()`函数返回的错误值进行判断:
+
+- 如果返回的错误为nil,说明文件或文件夹存在
+- 如果返回的错误类型使用`os.IsNotExist()` 或者 `os.IsExist()` 判断为true,说明文件或文件夹不存在
+- 如果返回的错误为其它类型,则不确定是否在存在
+
+```go
+// 判断所给路径文件/文件夹是否存在1
+func Exists(path string) bool {
+	_, err := os.Stat(path)    //os.Stat获取文件信息
+	if err != nil {
+		if os.IsExist(err) {
+			return true
+		}
+		return false
+	}
+	return true
+}
+
+// 判断所给路径文件/文件夹是否存在2
+func Exists(path string) bool {
+	_, err := os.Stat(path)    //os.Stat获取文件信息
+	if err != nil {
+		if os.IsNotExist(err) {
+			return false
+		}
+		return true
+	}
+	return true
+}
+
+
+// 判断所给路径文件/文件夹是否存在3  直接用os.IsNotExist(err)
+func Exists(path string) bool {
+	_, err := os.Stat(path)    //os.Stat获取文件信息
+	if os.IsNotExist(err) {
+		return false
+	}
+	return true
+}
+```
 
 
 
