--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -192,7 +192,7 @@ onst (
 
 切片（Slice）是一个拥有相同类型元素的可变长度的序列。它是基于数组类型做的一层封装。它非常灵活，支持自动扩容。
 
-切片是一个引用类型，它的内部结构包含`地址`、`长度`和`容量`。切片一般用于快速地操作一块数据集合。
+<font color=FF0000>切片是一个引用类型</font>>，它的内部结构包含`地址`、`长度`和`容量`。切片一般用于快速地操作一块数据集合。
 
  **`len()`**函数求长度，使用内置的**`cap()`**函数求切片的容量 
 
@@ -237,13 +237,20 @@ onst (
   s1 := make([]int, 3, 5)
   ```
 
-* 切片拷贝**`copy(dest,src)`**
+* 切片拷贝**`copy(dest,src)`**返回拷贝元素个数
 
   ```go
   s1 := make([]int, 3, 5)
   s2 := make([]int, 3, 5)
   copy(s2, s1)
   fmt.Println(s2)
+  
+  ss5 := []int{1,2,3,4,5}
+  ss6 := make([]int,len(ss5),cap(ss5))
+  count := copy(ss6,ss5)
+  fmt.Println(count)     // 5
+  fmt.Println(len(ss5))  // 5
+  fmt.Println(ss6)       // [1 2 3 4 5]
   ```
 
 * 切片取值，`顾头不顾尾`
@@ -275,6 +282,24 @@ onst (
 
   ```go
   clise = clise[0:0] // clice为切片的名字
+  ```
+
+* 删除元素
+
+  ```go
+  // 切片是引用指针类型，多次删除会在同一片内存操作
+  ss3 := []string{"a","b","c","d"}
+  // 删除第一个元素
+  ss3 = ss3[1:]
+  fmt.Println("删除第一个元素：",ss3)    //[b c d]
+  // 删除最后一个元素
+  ss3 = ss3[:cap(ss3)-1]
+  fmt.Println("删除最后一个元素：",ss3)  // [b c]
+  // 删除中间一个元素
+  ss4 := []int{1,2,3,4}
+  a := int(len(ss4)/2)
+  ss4 = append(ss4[:a],ss4[a+1:]...)
+  fmt.Println("删除中间元素：",ss4)
   ```
 
   
@@ -430,5 +455,7 @@ onst (
   fmt.Println(m6)
   ```
 
+* 清空map
 
+  直接新建一个map即可
 
