--- a/笔记/资料进度.md
+++ b/笔记/资料进度.md
@@ -30,6 +30,12 @@ D:\BaiduNetdiskDownload
 
 
 
+
+
+## 实用技巧。。。待看
+
+https://www.jb51.cc/go/
+
 ## goproxy
 
 [https://goproxy.cn/](https://goproxy.cn/)
