--- a/笔记/总结1.md
+++ b/笔记/总结1.md
@@ -15,13 +15,95 @@
   	// rune byte 返回切片
   	str := []rune(s)
   	println(string(str))
+      
   	// 修改字符，字符用单引号
   	str[5] = '语'
   	println(string(str))
+      
+    
+      s := "中文123abc"
+  	count := 0
+  	for  _,v := range []rune(s) {
+  		fmt.Printf("%c",v)       // 中文123abc
+  		count++
+  	}
+  	fmt.Println()
+  	fmt.Printf("字符数 %d",count)  // 字符数 8
+      
   }
   ```
 
-  
+## 字符串操作 
+
+`strings.funx()`
+
+### 检索字符串
+
+| 函数                                                       | 功能                                                         |
+| :--------------------------------------------------------- | ------------------------------------------------------------ |
+| Contains(s, substr string) bool                            | 判断字符串s是否包含substr字符串                              |
+| ContainsAny(s, chars string) bool                          | 判断字符串s是否包含chars字符串中任一字符                     |
+| ContainsRune(s string, r rune) bool                        | 判断字符串s是否包含unicode码值r                              |
+| Count(s, substr string) int                                | 返回字符串s包含字符字符串substr的个数，substr为空时，返回（s长度+1） |
+| HasPrefix(s, prefix string) bool                           | 判断字符串s是否有前缀字符串prefix                            |
+| HasSuffix(s, suffix string) bool                           | 判断字符串s是否有后缀字符串suffix                            |
+| Index(s, substr string) int                                | 返回字符串s中字符串substr首次出现的位置，不存在返回 -1       |
+| IndexAny(s, chars string) int                              | 返回字符串chars中的任意一个unicode码值在s中首次出现的位置    |
+| IndexByte(s string, c byte) int                            | 返回字符串s中字符c首次出现的位置                             |
+| IndexFunc(s string, f func(rune) bool) int                 | 返回字符串s中满足函数f(r)==true字符首次出现的位置            |
+| IndexRune(s string, r rune) int                            | 返回unicode码值r在字符串中首次出现的位置                     |
+| LastIndex(s, substr string) int                            | 返回字符串s中字符串substr最后一次出现的位置                  |
+| LastIndexAny(s, chars string) int                          | 返回字符串chars中任意一个unicode码值在s中最后一次出现的位置  |
+| LastIndexByte(s string, c byte) int                        | 返回字符串s中字符c最后一次出现的位置                         |
+| lastIndexFunc(s string, f func(rune) bool, truth bool) int | 返回字符串s中满足函数f(r)==true字符最后一次出现的位置        |
+
+
+
+### 分割字符串
+
+
+
+
+
+
+
+### 大小写转换
+
+
+
+
+
+
+
+### 修剪字符串
+
+
+
+
+
+
+
+### 比较字符串
+
+
+
+
+
+## 常用方法
+
+* "查找子串是否在指定的字符串中"  Contains()
+
+```go
+fmt.Println(strings.Contains("seafood","foo"))    //true
+fmt.Println(strings.Contains("seafood","bar"))    //false
+fmt.Println(strings.Contains("seafood",""))       //true
+fmt.Println(strings.Contains("",""))              //true 这里要特别注意
+fmt.Println(strings.Contains("我是中国人","我"))    //true
+```
+
+* 
+
+
 
 # 变量
 
